# databricks-health-monitor

./: .gitignore  CHANGELOG.md  PROACTIVE_SCHEMA_AUDIT.md  QUICKSTART.md  README.md  databricks.yml  debug_cost_transformed.json  pyproject.toml  temp_job_health_benchmarks.md
context/: agent_best_practices.txt  alerts.md  langgraph-multiagent-genie.py
docs/: ALL_GENIE_SPACES_COMPLETE.md  DEPLOYMENT_FIXES_JAN9.md  GENIE_4TASKS_COMPLETE_STATUS.md  GENIE_8_COLUMN_FIXES_DEPLOYED.md  GENIE_ALIAS_SPACING_FIXES.md  GENIE_ALL_150_QUESTIONS_ADDED.md  GENIE_ALL_FIXES_DEPLOYED.md  GENIE_ALL_SPACES_PROGRESS.md  GENIE_ANSWER_USER_QUESTION.md  GENIE_COLUMN_ANALYSIS_COMPLETE.md  GENIE_COLUMN_FIXES_DEPLOYED.md  GENIE_COMPREHENSIVE_PROGRESS_JAN9.md  GENIE_COMPREHENSIVE_STATUS.md  GENIE_CONCATENATION_BUGS_FIXED.md  GENIE_COST_INTELLIGENCE_STATUS.md  GENIE_DATA_QUALITY_MONITOR_FIXES.md  GENIE_DATA_QUALITY_MONITOR_FIXES_V3.md  GENIE_DATA_QUALITY_V2_FIXES.md  GENIE_DEPLOYMENT_STATUS.md  GENIE_DEPLOYMENT_TROUBLESHOOTING.md  GENIE_DEPLOYMENT_UPDATE_EXISTING_SPACES.md  GENIE_EASY_FIXES_COMPLETE.md  GENIE_FINAL_ANALYSIS_TVF_BUGS.md  GENIE_FINAL_FIXES_SESSION13.md  GENIE_FINAL_STATUS_100PCT_JAN9.md  GENIE_FINAL_STATUS_99PCT_JAN9.md  GENIE_FINAL_STATUS_JAN9.md  GENIE_FINAL_SYNC_STATUS.md  GENIE_FIXES_COMPREHENSIVE_SUMMARY.md  GENIE_FIXES_PROGRESS_REPORT.md  GENIE_FIX_ANALYSIS.md  GENIE_FIX_POST_MORTEM.md  GENIE_FIX_PROGRESS_STATUS.md  GENIE_FIX_STATUS_V2.md  GENIE_GROUND_TRUTH_FIXES_COMPLETE.md  GENIE_GROUND_TRUTH_FIXES_FINAL.md  GENIE_GROUND_TRUTH_V2_DEPLOYED.md  GENIE_GROUND_TRUTH_VALIDATION_COMPLETE.md  GENIE_JOB_HEALTH_MONITOR_FIXES.md  GENIE_LIMIT_ORDER_BY_FIX.md  (+51 more)
plans/: GOLD_COLUMN_MAPPING.md  README.md  phase1-bronze-ingestion.md  phase2-gold-layer-design.md  phase3-addendum-3.1-ml-models.md  phase3-addendum-3.2-tvfs.md  phase3-addendum-3.3-metric-views.md  phase3-addendum-3.4-lakehouse-monitoring.md  phase3-addendum-3.5-ai-bi-dashboards.md  phase3-addendum-3.6-genie-spaces.md  phase3-addendum-3.7-alerting-framework.md  phase3-use-cases.md  phase4-agent-framework.md  phase5-frontend-app.md
resources/: master_refresh_orchestrator.yml  master_setup_orchestrator.yml
scripts/: add_filters_to_datasets.py  add_path_setup_to_notebooks.py  align_genie_spec_files.py  apply_ground_truth_fixes.py  audit_ml_scripts.py  check_dq_rules.py  check_dq_schema.py  cleanup_and_restore_benchmarks.py  compare_with_reference.py  complete_genie_json_exports.py  comprehensive_sql_fixer.py  consolidated_dq_migration.sql  convert_hardcoded_to_template_vars.py  debug_cost_transformation.py  debug_validation_sql.py  delete_dashboards.py  delete_monitoring_dashboards.sh  deploy_genie_spaces_local.py  extract_benchmarks_to_json.py  extract_tvf_signatures.py  final_audit.py  fix_all_genie_benchmarks.py  fix_all_genie_instructions_format.py  fix_all_genie_json_exports.py  fix_all_genie_json_format_comprehensive.py  fix_all_genie_spaces_session23.py  fix_all_ml_issues.py  fix_all_remaining_genie_errors.py  fix_all_remaining_genie_errors_final.py  fix_all_table_schemas_hardcoded.py  fix_all_template_variables_comprehensive.py  fix_benchmark_sql_errors.py  fix_benchmarks_with_ground_truth.py  fix_column_names.py  fix_config_name_description.py  fix_cost_instructions_format.py  fix_cost_intelligence_benchmarks.py  fix_cost_intelligence_cross_join_bug.py  (+101 more)
(+1007 files in other folders)
